src/wrapper_refcounted/torch_refcounted_api_generated.h

value atg_to_dense(value self, int dtype, int masked_grad);
value atg_to_dense_backward(value grad, value input, int masked_grad);
value atg_to_device(value self, int device, int dtype, int non_blocking, int copy);
value atg_to_dtype(value self, int dtype, int non_blocking, int copy);
value atg_to_dtype_layout(value self, int options_kind, int options_device, int non_blocking, int copy);
value atg_to_mkldnn(value self, int dtype);
value atg_to_mkldnn_backward(value grad, value input);
value atg_to_mkldnn_out(value out, value self, int dtype);
value atg_to_other(value self, value other, int non_blocking, int copy);
value atg_to_padded_tensor(value self, double padding, value output_size);
value atg_to_padded_tensor_out(value out, value self, double padding, value output_size);
value atg_topk(value self, int64_t k, int64_t dim, int largest, int sorted);
value atg_topk_values(value values, value indices, value self, int64_t k, int64_t dim, int largest, int sorted);
value atg_totype(value self, int scalar_type);
value atg_trace(value self);
value atg_trace_backward(value grad, value sizes);
value atg_trace_out(value out, value self);
value atg_transpose(value self, int64_t dim0, int64_t dim1);
value atg_transpose_(value self, int64_t dim0, int64_t dim1);
value atg_transpose_copy(value self, int64_t dim0, int64_t dim1);
value atg_transpose_copy_int_out(value out, value self, int64_t dim0, int64_t dim1);
value atg_trapezoid(value y, value x, int64_t dim);
value atg_trapezoid_dx(value y, value dx, int64_t dim);
value atg_trapz(value y, value x, int64_t dim);
value atg_trapz_dx(value y, double dx, int64_t dim);
value atg_triangular_solve(value self, value A, int upper, int transpose, int unitriangular);
value atg_triangular_solve_x(value X, value M, value self, value A, int upper, int transpose, int unitriangular);
value atg_tril(value self, int64_t diagonal);
value atg_tril_(value self, int64_t diagonal);
value atg_tril_indices(int64_t row, int64_t col, int64_t offset, int options_kind, int options_device);
value atg_tril_indices_out(value out, int64_t row, int64_t col, int64_t offset);
value atg_tril_out(value out, value self, int64_t diagonal);
value atg_triplet_margin_loss(value anchor, value positive, value negative, double margin, double p, double eps, int swap, int64_t reduction);
value atg_triu(value self, int64_t diagonal);
value atg_triu_(value self, int64_t diagonal);
value atg_triu_indices(int64_t row, int64_t col, int64_t offset, int options_kind, int options_device);
value atg_triu_indices_out(value out, int64_t row, int64_t col, int64_t offset);
value atg_triu_out(value out, value self, int64_t diagonal);
value atg_true_divide(value self, value other);
value atg_true_divide_(value self, value other);
value atg_true_divide_out(value out, value self, value other);
value atg_true_divide_scalar(value self, value other);
value atg_true_divide_scalar_(value self, value other);
value atg_trunc(value self);
value atg_trunc_(value self);
value atg_trunc_out(value out, value self);
value atg_type_as(value self, value other);
value atg_unbind(value self, int64_t dim);
value atg_unbind_copy(value self, int64_t dim);
void atg_unbind_copy_int_out(value out, value self, int64_t dim);
value atg_unflatten(value self, int64_t dim, value sizes);
value atg_unflatten_dense_tensors(value flat, value tensors);
value atg_unfold(value self, int64_t dimension, int64_t size, int64_t step);
value atg_unfold_backward(value grad_in, value input_sizes, int64_t dim, int64_t size, int64_t step);
value atg_unfold_backward_out(value out, value grad_in, value input_sizes, int64_t dim, int64_t size, int64_t step);
value atg_unfold_copy(value self, int64_t dimension, int64_t size, int64_t step);
value atg_unfold_copy_out(value out, value self, int64_t dimension, int64_t size, int64_t step);
value atg_uniform(value self, double from, double to);
value atg_uniform_(value self, double from, double to);
value atg_uniform_out(value out, value self, double from, double to);
value atg_unique_consecutive(value self, int return_inverse, int return_counts, value dim);
value atg_unique_consecutive_out(value out0, value out1, value out2, value self, int return_inverse, int return_counts, value dim);
value atg_unique_dim(value self, int64_t dim, int sorted, int return_inverse, int return_counts);
value atg_unique_dim_consecutive(value self, int64_t dim, int return_inverse, int return_counts);
value atg_unique_dim_consecutive_out(value out0, value out1, value out2, value self, int64_t dim, int return_inverse, int return_counts);
value atg_unique_dim_out(value out0, value out1, value out2, value self, int64_t dim, int sorted, int return_inverse, int return_counts);
value atg_unsafe_chunk(value self, int64_t chunks, int64_t dim);
value atg_unsafe_split(value self, int64_t split_size, int64_t dim);
void atg_unsafe_split_tensor_out(value out, value self, int64_t split_size, int64_t dim);
value atg_unsafe_split_with_sizes(value self, value split_sizes, int64_t dim);
void atg_unsafe_split_with_sizes_out(value out, value self, value split_sizes, int64_t dim);
value atg_unsqueeze(value self, int64_t dim);
value atg_unsqueeze_(value self, int64_t dim);
value atg_unsqueeze_copy(value self, int64_t dim);
value atg_unsqueeze_copy_out(value out, value self, int64_t dim);
value atg_upsample_bicubic2d(value self, value output_size, int align_corners, value scales_h, value scales_w);
value atg_upsample_bicubic2d_backward(value grad_output, value output_size, value input_size, int align_corners, value scales_h, value scales_w);