src/bindings/torch_bindings_generated7.ml


  let stubs_to_dense =
    foreign "atg_to_dense" (gc_tensor @-> int @-> int @-> returning raw_tensor)
  ;;

  let stubs_to_dense_backward =
    foreign
      "atg_to_dense_backward"
      (gc_tensor @-> gc_tensor @-> int @-> returning raw_tensor)
  ;;

  let stubs_to_device =
    foreign
      "atg_to_device"
      (gc_tensor @-> int @-> int @-> int @-> int @-> returning raw_tensor)
  ;;

  let stubs_to_dtype =
    foreign "atg_to_dtype" (gc_tensor @-> int @-> int @-> int @-> returning raw_tensor)
  ;;

  let stubs_to_dtype_layout =
    foreign
      "atg_to_dtype_layout"
      (gc_tensor @-> int @-> int @-> int @-> int @-> returning raw_tensor)
  ;;

  let stubs_to_mkldnn =
    foreign "atg_to_mkldnn" (gc_tensor @-> int @-> returning raw_tensor)
  ;;

  let stubs_to_mkldnn_backward =
    foreign "atg_to_mkldnn_backward" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_to_mkldnn_out =
    foreign "atg_to_mkldnn_out" (gc_tensor @-> gc_tensor @-> int @-> returning raw_tensor)
  ;;

  let stubs_to_other =
    foreign
      "atg_to_other"
      (gc_tensor @-> gc_tensor @-> int @-> int @-> returning raw_tensor)
  ;;

  let stubs_to_padded_tensor =
    foreign
      "atg_to_padded_tensor"
      (gc_tensor @-> double @-> ptr int64_t @-> int @-> returning raw_tensor)
  ;;

  let stubs_to_padded_tensor_out =
    foreign
      "atg_to_padded_tensor_out"
      (gc_tensor @-> gc_tensor @-> double @-> ptr int64_t @-> int @-> returning raw_tensor)
  ;;

  let stubs_topk =
    foreign
      "atg_topk"
      (ptr raw_tensor
       @-> gc_tensor
       @-> int64_t
       @-> int64_t
       @-> int
       @-> int
       @-> returning void)
  ;;

  let stubs_topk_values =
    foreign
      "atg_topk_values"
      (ptr raw_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> int64_t
       @-> int64_t
       @-> int
       @-> int
       @-> returning void)
  ;;

  let stubs_totype = foreign "atg_totype" (gc_tensor @-> int @-> returning raw_tensor)
  let stubs_trace = foreign "atg_trace" (gc_tensor @-> returning raw_tensor)

  let stubs_trace_backward =
    foreign
      "atg_trace_backward"
      (gc_tensor @-> ptr int64_t @-> int @-> returning raw_tensor)
  ;;

  let stubs_trace_out =
    foreign "atg_trace_out" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_transpose =
    foreign "atg_transpose" (gc_tensor @-> int64_t @-> int64_t @-> returning raw_tensor)
  ;;

  let stubs_transpose_ =
    foreign "atg_transpose_" (gc_tensor @-> int64_t @-> int64_t @-> returning raw_tensor)
  ;;

  let stubs_transpose_copy =
    foreign
      "atg_transpose_copy"
      (gc_tensor @-> int64_t @-> int64_t @-> returning raw_tensor)
  ;;

  let stubs_transpose_copy_int_out =
    foreign
      "atg_transpose_copy_int_out"
      (gc_tensor @-> gc_tensor @-> int64_t @-> int64_t @-> returning raw_tensor)
  ;;

  let stubs_trapezoid =
    foreign "atg_trapezoid" (gc_tensor @-> gc_tensor @-> int64_t @-> returning raw_tensor)
  ;;

  let stubs_trapezoid_dx =
    foreign "atg_trapezoid_dx" (gc_tensor @-> scalar @-> int64_t @-> returning raw_tensor)
  ;;

  let stubs_trapz =
    foreign "atg_trapz" (gc_tensor @-> gc_tensor @-> int64_t @-> returning raw_tensor)
  ;;

  let stubs_trapz_dx =
    foreign "atg_trapz_dx" (gc_tensor @-> double @-> int64_t @-> returning raw_tensor)
  ;;

  let stubs_triangular_solve =
    foreign
      "atg_triangular_solve"
      (ptr raw_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> int
       @-> int
       @-> int
       @-> returning void)
  ;;

  let stubs_triangular_solve_x =
    foreign
      "atg_triangular_solve_x"
      (ptr raw_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> int
       @-> int
       @-> int
       @-> returning void)
  ;;

  let stubs_tril = foreign "atg_tril" (gc_tensor @-> int64_t @-> returning raw_tensor)
  let stubs_tril_ = foreign "atg_tril_" (gc_tensor @-> int64_t @-> returning raw_tensor)

  let stubs_tril_indices =
    foreign
      "atg_tril_indices"
      (int64_t @-> int64_t @-> int64_t @-> int @-> int @-> returning raw_tensor)
  ;;

  let stubs_tril_indices_out =
    foreign
      "atg_tril_indices_out"
      (gc_tensor @-> int64_t @-> int64_t @-> int64_t @-> returning raw_tensor)
  ;;

  let stubs_tril_out =
    foreign "atg_tril_out" (gc_tensor @-> gc_tensor @-> int64_t @-> returning raw_tensor)
  ;;

  let stubs_triplet_margin_loss =
    foreign
      "atg_triplet_margin_loss"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> double
       @-> double
       @-> double
       @-> int
       @-> int64_t
       @-> returning raw_tensor)
  ;;

  let stubs_triu = foreign "atg_triu" (gc_tensor @-> int64_t @-> returning raw_tensor)
  let stubs_triu_ = foreign "atg_triu_" (gc_tensor @-> int64_t @-> returning raw_tensor)

  let stubs_triu_indices =
    foreign
      "atg_triu_indices"
      (int64_t @-> int64_t @-> int64_t @-> int @-> int @-> returning raw_tensor)
  ;;

  let stubs_triu_indices_out =
    foreign
      "atg_triu_indices_out"
      (gc_tensor @-> int64_t @-> int64_t @-> int64_t @-> returning raw_tensor)
  ;;

  let stubs_triu_out =
    foreign "atg_triu_out" (gc_tensor @-> gc_tensor @-> int64_t @-> returning raw_tensor)
  ;;

  let stubs_true_divide =
    foreign "atg_true_divide" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_true_divide_ =
    foreign "atg_true_divide_" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_true_divide_out =
    foreign
      "atg_true_divide_out"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;
end

module C2 (F : Cstubs.FOREIGN) = struct
  open F
  open Type_defs

  let stubs_true_divide_scalar =
    foreign "atg_true_divide_scalar" (gc_tensor @-> scalar @-> returning raw_tensor)
  ;;

  let stubs_true_divide_scalar_ =
    foreign "atg_true_divide_scalar_" (gc_tensor @-> scalar @-> returning raw_tensor)
  ;;

  let stubs_trunc = foreign "atg_trunc" (gc_tensor @-> returning raw_tensor)
  let stubs_trunc_ = foreign "atg_trunc_" (gc_tensor @-> returning raw_tensor)

  let stubs_trunc_out =
    foreign "atg_trunc_out" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_type_as =
    foreign "atg_type_as" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_unbind =
    foreign "atg_unbind" (gc_tensor @-> int64_t @-> returning (ptr raw_tensor))
  ;;

  let stubs_unbind_copy =
    foreign "atg_unbind_copy" (gc_tensor @-> int64_t @-> returning (ptr raw_tensor))
  ;;

  let stubs_unbind_copy_int_out =
    foreign
      "atg_unbind_copy_int_out"
      (ptr gc_tensor @-> int @-> gc_tensor @-> int64_t @-> returning void)
  ;;

  let stubs_unflatten =
    foreign
      "atg_unflatten"
      (gc_tensor @-> int64_t @-> ptr int64_t @-> int @-> returning raw_tensor)
  ;;

  let stubs_unflatten_dense_tensors =
    foreign
      "atg_unflatten_dense_tensors"
      (gc_tensor @-> ptr gc_tensor @-> int @-> returning (ptr raw_tensor))
  ;;

  let stubs_unfold =
    foreign
      "atg_unfold"
      (gc_tensor @-> int64_t @-> int64_t @-> int64_t @-> returning raw_tensor)
  ;;

  let stubs_unfold_backward =
    foreign
      "atg_unfold_backward"
      (gc_tensor
       @-> ptr int64_t
       @-> int
       @-> int64_t
       @-> int64_t
       @-> int64_t
       @-> returning raw_tensor)
  ;;

  let stubs_unfold_backward_out =
    foreign
      "atg_unfold_backward_out"
      (gc_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> int64_t
       @-> int64_t
       @-> int64_t
       @-> returning raw_tensor)
  ;;

  let stubs_unfold_copy =
    foreign
      "atg_unfold_copy"
      (gc_tensor @-> int64_t @-> int64_t @-> int64_t @-> returning raw_tensor)
  ;;

  let stubs_unfold_copy_out =
    foreign
      "atg_unfold_copy_out"
      (gc_tensor
       @-> gc_tensor
       @-> int64_t
       @-> int64_t
       @-> int64_t
       @-> returning raw_tensor)
  ;;

  let stubs_uniform =
    foreign "atg_uniform" (gc_tensor @-> double @-> double @-> returning raw_tensor)
  ;;

  let stubs_uniform_ =
    foreign "atg_uniform_" (gc_tensor @-> double @-> double @-> returning raw_tensor)
  ;;

  let stubs_uniform_out =
    foreign
      "atg_uniform_out"
      (gc_tensor @-> gc_tensor @-> double @-> double @-> returning raw_tensor)
  ;;

  let stubs_unique_consecutive =
    foreign
      "atg_unique_consecutive"
      (ptr raw_tensor @-> gc_tensor @-> int @-> int @-> int64_t @-> int @-> returning void)
  ;;

  let stubs_unique_consecutive_out =
    foreign
      "atg_unique_consecutive_out"
      (ptr raw_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> int
       @-> int
       @-> int64_t
       @-> int
       @-> returning void)
  ;;

  let stubs_unique_dim =
    foreign
      "atg_unique_dim"
      (ptr raw_tensor @-> gc_tensor @-> int64_t @-> int @-> int @-> int @-> returning void)
  ;;

  let stubs_unique_dim_consecutive =
    foreign
      "atg_unique_dim_consecutive"
      (ptr raw_tensor @-> gc_tensor @-> int64_t @-> int @-> int @-> returning void)
  ;;

  let stubs_unique_dim_consecutive_out =
    foreign
      "atg_unique_dim_consecutive_out"
      (ptr raw_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> int64_t
       @-> int
       @-> int
       @-> returning void)
  ;;

  let stubs_unique_dim_out =
    foreign
      "atg_unique_dim_out"
      (ptr raw_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> int64_t
       @-> int
       @-> int
       @-> int
       @-> returning void)
  ;;

  let stubs_unsafe_chunk =
    foreign
      "atg_unsafe_chunk"
      (gc_tensor @-> int64_t @-> int64_t @-> returning (ptr raw_tensor))
  ;;

  let stubs_unsafe_split =
    foreign
      "atg_unsafe_split"
      (gc_tensor @-> int64_t @-> int64_t @-> returning (ptr raw_tensor))
  ;;

  let stubs_unsafe_split_tensor_out =
    foreign
      "atg_unsafe_split_tensor_out"
      (ptr gc_tensor @-> int @-> gc_tensor @-> int64_t @-> int64_t @-> returning void)
  ;;

  let stubs_unsafe_split_with_sizes =
    foreign
      "atg_unsafe_split_with_sizes"
      (gc_tensor @-> ptr int64_t @-> int @-> int64_t @-> returning (ptr raw_tensor))
  ;;

  let stubs_unsafe_split_with_sizes_out =
    foreign
      "atg_unsafe_split_with_sizes_out"
      (ptr gc_tensor
       @-> int
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> int64_t
       @-> returning void)
  ;;

  let stubs_unsqueeze =
    foreign "atg_unsqueeze" (gc_tensor @-> int64_t @-> returning raw_tensor)
  ;;

  let stubs_unsqueeze_ =
    foreign "atg_unsqueeze_" (gc_tensor @-> int64_t @-> returning raw_tensor)
  ;;

  let stubs_unsqueeze_copy =
    foreign "atg_unsqueeze_copy" (gc_tensor @-> int64_t @-> returning raw_tensor)
  ;;

  let stubs_unsqueeze_copy_out =
    foreign
      "atg_unsqueeze_copy_out"
      (gc_tensor @-> gc_tensor @-> int64_t @-> returning raw_tensor)
  ;;

  let stubs_upsample_bicubic2d =
    foreign
      "atg_upsample_bicubic2d"
      (gc_tensor
       @-> ptr int64_t
       @-> int
       @-> int
       @-> double
       @-> int
       @-> double
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_upsample_bicubic2d_backward =
    foreign
      "atg_upsample_bicubic2d_backward"
      (gc_tensor
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> int
       @-> double
       @-> int
       @-> double
       @-> int
       @-> returning raw_tensor)
  ;;
